# logmedic

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.alpine  Dockerfile.debian  Dockerfile.distroless  LICENSE  README.md  logmedic.toml
.github/scripts/: cross_compile.py
.github/workflows/: ci.yml  docker.yml
plugins/claude_remediator/: claude_remediator.py
plugins/loki_detector/: loki_detector.py
src/: error.rs  main.rs  metrics.rs
src/config/: mod.rs
src/detect/: mod.rs
src/plugin/: mod.rs  native.rs  python.rs
src/remediate/: mod.rs
